--- a/build.gradle
+++ b/build.gradle
@@ -17,6 +17,12 @@ buildscript {
 
 apply plugin: 'forge'
 
+file "build.properties" withReader {
+    def prop = new Properties()
+    prop.load(it)
+    ext.config = new ConfigSlurper().parse prop
+}
+
 version = "58.0.0"
 group= "mods.immibis.microblocks" // http://maven.apache.org/guides/mini/guide-naming-conventions.html
 archivesBaseName = "ImmibisMicroblocks"
